Edited dashboard,Game introduction first version

--- a/index.html
+++ b/index.html
@@ -100,12 +100,16 @@
 
 		<div id="monogatari">
 			<visual-novel>
-				<language-selection-screen></language-selection-screen>
-				<loading-screen></loading-screen>
-				<main-screen>
+			
+				<main-screen style="background-image: url(https://cdna.artstation.com/p/assets/images/images/010/519/828/large/goliat-gashi-uni-jour-aplatis.jpg?1524841793);">
+					<div style="position: relative; top:10%;">
+						<h1 style="color:black;;">Welcome to LaroMundo</h1>
+						<h2 style="color: blue;">The Ulaps University game</h2>
+					</div>
 					<main-menu></main-menu>
 				</main-screen>
 				<game-screen>
+
 					<dialog-log></dialog-log>
 					<text-box></text-box>
 					<quick-menu></quick-menu>
