added images and create bg main screen

--- a/index.html
+++ b/index.html
@@ -101,12 +101,8 @@
 		<div id="monogatari">
 			<visual-novel>
 			
-				<main-screen style="background-image: url(https://cdna.artstation.com/p/assets/images/images/010/519/828/large/goliat-gashi-uni-jour-aplatis.jpg?1524841793);">
-					<div style="position: relative; top:10%;">
-						<h1 style="color:black;;">Welcome to LaroMundo</h1>
-						<h2 style="color: blue;">The Ulaps University game</h2>
-					</div>
-					<main-menu></main-menu>
+				<main-screen style="background-image: url(/Game-Java/assets/scenes/bg_m-screen.png);" style="background-size: cover;" style="background-repeat: no-repeat;">
+				<main-menu></main-menu>
 				</main-screen>
 				<game-screen>
 
