added messages on script.js and scene bg

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		<div id="monogatari">
 			<visual-novel>
 			
-				<main-screen style="background-image: url(/Game-Java/assets/scenes/bg_m-screen.png);" style="background-size: cover;" style="background-repeat: no-repeat;">
+				<main-screen style="background-image: url(/Game-Java/assets/scenes/bg_m-screen.png);" style="background-size: cover;">
 				<main-menu></main-menu>
 				</main-screen>
 				<game-screen>
