--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 		<script src="./js/storage.js"></script>
 		<script src="./js/script.js"></script>
 		<script src="./js/main.js"></script>
+		<script src="./js/playerEvents.js"></script>
 
 	</head>
 
@@ -101,7 +102,7 @@
 		<div id="monogatari">
 			<visual-novel>
 			
-				<main-screen style="background-image: url(/Game-Java/assets/scenes/bg_m-screen.png);" style="background-size: cover;" style="background-repeat: no-repeat;">
+				<main-screen style="background-image: url(./assets/scenes/bg_m-screen.png);" style="background-size: cover;" style="background-repeat: no-repeat;">
 				<main-menu></main-menu>
 				</main-screen>
 				<game-screen>
