added scene for Review break with sidekick Joe

--- a/index.html
+++ b/index.html
@@ -102,11 +102,7 @@
 		<div id="monogatari">
 			<visual-novel>
 			
-<<<<<<< HEAD
-				<main-screen style="background-image: url(./assets/scenes/bg_m-screen.png);" style="background-size: cover;" style="background-repeat: no-repeat;">
-=======
-				<main-screen style="background-image: url(/Game-Java/assets/scenes/bg_m-screen.png);" style="background-size: cover;">
->>>>>>> 367d10040adbddb3a37be3f075f3142ab46098d8
+				<main-screen style="background-image: url(./assets/scenes/bg_m-screen.png);" style="background-size: cover;">
 				<main-menu></main-menu>
 				</main-screen>
 				<game-screen>
